vraiment pas sûr de ce que j'ai fait ici!
tbh!

--- a/tests/import_test.ipynb
+++ b/tests/import_test.ipynb
@@ -448,6 +448,54 @@
     "\n",
     "print(df.head())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b54fd28b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Province Vehicle class  Count\n",
+      "0   Quebec           SUV    100\n",
+      "1  Alberta           SUV    120\n",
+      "2   Quebec         Sedan     80\n",
+      "3  Ontario        Pickup     60\n"
+     ]
+    }
+   ],
+   "source": [
+    "import util.normalizer\n",
+    "import pandas as pd\n",
+    "\n",
+    "# --- canonical dictionaries (simplified for demo) ------------------\n",
+    "PROVINCES = {\n",
+    "    \"Alberta\": [\"ab\", \"alberta\", \"albert\"],\n",
+    "    \"Quebec\": [\"qc\", \"québec\", \"queb\"],\n",
+    "}\n",
+    "\n",
+    "VEHICLE_CLASSES = {\n",
+    "    \"SUV\": [\"suv\", \"sport utility vehicle\", \"vus\"],\n",
+    "    \"Compact\": [\"compact\", \"subcompact\"],\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
+    "original_df = pd.DataFrame(\n",
+    "    {\n",
+    "        \"Province\": [\"Qc\", \"ab\", \"Québec\", \"Ontario\"],\n",
+    "        \"Vehicle class\": [\"SUV\", \"sport utility vehicle\", \"compact\", \"Pickup\"],\n",
+    "        \"Count\": [100, 120, 80, 60],\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "normalized_df = util.normalizer.normalize_dataframe(original_df)\n",
+    "\n",
+    "print(normalized_df)"
+   ]
   }
  ],
  "metadata": {
